# agent-evidence-board

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CODEX_FOR_OSS_APPLICATION_DRAFT.md  MAINTAINER_WORKFLOWS.md  RELEASE_CHECKLIST.md  THREAT_MODEL.md  USE_CASES.md
examples/: blocked_card_missing_source.json  github-action-gate.yml  sample_intelligence_card.json
src/agent_evidence_board/: __init__.py  board.py  capture.py  cli.py  gate.py
src/agent_evidence_board/schemas/: evidence_card.schema.json  judge_decision.schema.json  raw_event.schema.json  review.schema.json
tests/: test_board_cli.py  test_gate.py
tests/fixtures/: example_dot_com_capture.json
